CreateEmployee View and ViewModel

--- a/DAN_LIII_Marko_Gacinovic/Hotel/Hotel.csproj
+++ b/DAN_LIII_Marko_Gacinovic/Hotel/Hotel.csproj
@@ -64,6 +64,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\CreateEmployeeViewModel.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="ViewModel\MasterViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
